--- a/Source/Enter.Ui/Styles/components/_ent_overlay.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_overlay.component.scss
@@ -9,7 +9,7 @@
   border-radius: inherit;
   display: flex;
   position: fixed;
-  z-index: var(--ent-z-index-emphasis);
+  z-index: var(--ent-z-index-10);
   transition: var(--ent-transition-all);
   
   &.ent-overlay-absolute {
